tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Aluminium-AAAAAAAAAAAAAAAAAAAIlg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2198,
  "prerequisites": [
    2194,
    2195
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Aluminium isn't necessary until MV, but when you want it, you'll want lots. Requires block of Aluminium. Breed them from Nickel and Zinc.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Aluminium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2194,
    2195
  ],
  "rewards": [],
  "tasks": []
}
