tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Aqua-AAAAAAAAAAAAAAAAAAAIrA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2220,
  "prerequisites": [
    2227
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Aqua requires a Water Crystal Cluster. It will produce Water infused dust. Staying nearby will clear potion effects, like drinking a bucket of milk. Might be useful for the clever industrial engineer! Breed them from two Watery.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Aqua",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2227
  ],
  "rewards": [],
  "tasks": []
}
